/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'dk.sebsa.java-library-conventions'
    id 'maven-publish'
}

group = 'dk.sebsa'
version = '1.0.0-SNAPSHOT'
description = 'Emerald Logging Lib'
java.sourceCompatibility = JavaVersion.VERSION_16

publishing {
    publications {
        maven(MavenPublication) {
            groupId = "dk.sebsa"
            artifactId = "coal"
            version = version
            from components.java
        }
    }
    repositories {
        maven {
            url "https://maven.pkg.jetbrains.space/emerald/p/coal/coal"
            credentials {
                username = "$System.env.JB_SPACE_CLIENT_ID"
                password = "$System.env.JB_SPACE_CLIENT_SECRET"
            }
        }
    }
}